syntax = "proto3";
option csharp_namespace = "Blog.Contract";

package count;

service Counter {
  rpc StartCounter (CounterRequest) returns (stream CounterResponse);
}

message CounterRequest {
  int32 start = 1;
}

message CounterResponse {
  int32 count = 1;
}
